--- a/muthwee_final.html
+++ b/muthwee_final.html
@@ -62,7 +62,7 @@ img{
 .fadeIn{ opacity:1; }
 
 #typedText{
-  min-height:160px;
+  min-height:180px;
   margin-top:15px;
   white-space:pre-line;
 }
@@ -89,7 +89,6 @@ img{
 
 <div class="card">
 
-<!-- LOCK SCREEN -->
 <div id="lockScreen">
   <h1>Private Access 💛</h1>
   <p>Only for Muthwee 🐾</p>
@@ -98,7 +97,6 @@ img{
   <button onclick="checkPassword()">Unlock</button>
 </div>
 
-<!-- MAIN CONTENT -->
 <div id="mainContent" class="hidden">
   <h1>Happy Birthday My Golden Boy ☕💛</h1>
 
@@ -148,7 +146,8 @@ let message =
 "your hugs stay tight,\n" +
 "and your smile never fade.\n\n" +
 "Stay soft. Stay silly. Stay mine.\n\n" +
-"— Always yours,\nAmmuzz 💛";
+"— Always yours,\nAmmuzz 🌻💛\n\n" +
+"P.S. You are my favorite chapter of life. 🌻💛📖";
 
 function typeMessage(){
   let i = 0;
@@ -164,7 +163,7 @@ function typeMessage(){
 }
 
 function sendHug(){
-  alert("Ammuzz sent you the tightest hug ever 🤗💛");
+  alert("Ammuzz sent you the tightest hug ever and muthwee kettipidichu njekkipidichu shwasamuttichu ummahhhh 💋🤗💛");
   createHearts();
 }
 
